[package]
name = "chat_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rocket_contrib = {version = "*", features = ["json"]}
rusqlite = {version = "*", features = ["bundled"]}